# ccsm

./: .coderabbitignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  remote-install.ps1  remote-install.sh
.github/: FUNDING.yml
.github/workflows/: claude-code-pr-fix.yml  code-rabbit-review.yml  release.yml
src/: app.rs  config.rs  config_popup.rs  data.rs  keys.rs  live.rs  main.rs  theme.rs  ui.rs  update.rs
src/app/: activity.rs  chain.rs  display.rs  filter.rs  flat.rs  mod.rs  preview.rs  selection.rs  tests.rs  tree.rs
src/data/: ccsm_history.rs  history.rs  io.rs  mod.rs  preview.rs  tests.rs  titles.rs  types.rs
src/ui/: ansi.rs  info_bar.rs  mod.rs  modals.rs  preview_pane.rs  session_list.rs  util.rs
