[package]
name = "ccsm"
version = "1.9.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
unicode-width = "0.2"
zip = "2"
tui-input = "0.10"
regex = "1"
sha2 = "0.10"
